<resources>
    <string name="app_name">PruebaExamen</string>
    <string name="activity_main_logo">Logo</string>
    <string name="activity_main_transportes_android">TRANSPORTES ANDROID</string>
    <string name="global_zona_a">A</string>
    <string name="global_zona_a_continentes">Asia/Oceanía</string>
    <string name="global_zona_b">B</string>
    <string name="global_zona_b_continentes">América/África</string>
    <string name="global_zona_c">C</string>
    <string name="global_zona_c_continentes">Europa</string>
    <string name="activity_main_tarifa_normal">TARIFA NORMAL</string>
    <string name="activity_main_tarifa_urgente">TARIFA URGENTE</string>
    <string name="activity_main_caja_regalo">Caja regalo</string>
    <string name="activity_main_con_tarjeta">Con tarjeta dedicada</string>
    <string name="activity_main_introducir_peso">Introduce el peso del paquete:</string>
    <string name="activity_main_hacer_calculos">HACER CALCULOS</string>
    <string name="activity_resultado_peso">Peso: %fKg.</string>
    <string name="activity_resultado_zona">Zona: %s (%s).</string>
    <string name="activity_resultado_tarifa">Tarifa: %s.</string>
    <string name="activity_resultado_tarifa_normal">normal</string>
    <string name="activity_resultado_tarifa_urgente">urgente</string>
    <string name="activity_resultado_decoracion">Decoración: %s.</string>
    <string name="activity_resultado_decoracion_ninguna">Sin decoración.</string>
    <string name="activity_resultado_decoracion_alguna">Con %s</string>
    <string name="activity_resultado_decoracion_regalo">caja regalo</string>
    <string name="activity_resultado_decoracion_ambas">y</string>
    <string name="activity_resultado_decoracion_dedicatoria">tarjeta dedicatoria</string>
    <string name="activity_resultado_coste">COSTE FINAL: %.2f€ (%.2f + (%.2f*%.4f) + (%.2f*%.2f)).</string>
    <string name="activity_acerca_de_version">Versión: %s</string>
    <string name="activity_acerca_de_version_numero">0.1</string>
    <string name="activity_acerca_de_autores">Autores: %s</string>
    <string name="activity_acerca_de_autores_nombres">Juan Miguel Navarro Martínez</string>
    <string name="actitivy_acerca_de_copyright">Copyright 2017-%d Juan Miguel Navarro Martínez</string>
</resources>
