<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.institutoserpis.juanminm.pruebaexamen.MainActivity">

    <TextView
        android:id="@+id/activity_main_tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_main_transportes_android"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/activity_main_sp_zona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_tv_titulo"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_titulo"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/activity_main_iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/activity_main_logo"/>

    <RadioGroup
        android:id="@+id/activity_main_rg_tarifa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/activity_main_iv_logo"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_iv_logo"
        android:layout_marginRight="8dp"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/activity_main_rb_tarifa_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tarifa_normal" />

        <RadioButton
            android:id="@+id/activity_main_rb_tarifa_urgente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tarifa_urgente" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/activity_main_cb_caja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/activity_main_rg_tarifa"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_main_caja_regalo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_rg_tarifa"
        android:layout_marginLeft="8dp"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/activity_main_cb_tarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_main_cb_caja"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:text="@string/activity_main_con_tarjeta"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_main_cb_caja"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/activity_main_et_peso_paquete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_cb_caja"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/activity_main_introducir_peso"
        android:inputType="number|numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_cb_caja"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/activity_main_btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/activity_main_hacer_calculos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
